<resources>

    <!-- Generated content -->
    <string name="app_name">Atelierul Digital Demo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Atelierul Digital</string>
    <string name="nav_header_subtitle">Android Fundamentals Demo App</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="hello_world">Alege demo-ul din meniul de navigare.</string>
    <string name="nav_label_curs1">Curs 1</string>
    <string name="nav_label_curs2">Curs 2</string>
    <string name="nav_label_curs3">Curs 3</string>
    <string name="nav_label_curs4">Curs 4</string>
    <string name="nav_label_about">Despre</string>
    <string name="nav_sectiontitle_about">About</string>
    <string name="actLinearLogin_title">Linear Layout Login</string>
    <string name="actLinearLogin_inputUsername_hint">Username</string>
    <string name="actLinearLogin_inputPassword_hint">Password</string>
    <string name="actLinearLogin_button_text">Sign In</string>
    <string name="actLinearLogin_text_login_success">Login was successful!</string>
    <string name="actRelativeLogin_title">Relative Layout Login</string>
    <string name="actRelativeLogin_button_text">Sign In</string>
    <string name="actRelativeLogin_inputPassword_hint">Password</string>




</resources>
