<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_curs1"
            android:title="@string/nav_label_curs1" />
        <item
            android:id="@+id/nav_curs2"
            android:title="@string/nav_label_curs2" />
        <item
            android:id="@+id/nav_curs3"
            android:title="@string/nav_label_curs3" />
        <item
            android:id="@+id/nav_curs4"
            android:title="@string/nav_label_curs4" />
    </group>

    <item android:title="@string/nav_sectiontitle_about">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:title="@string/nav_label_about" />
        </menu>
    </item>

</menu>
