<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="32dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/actLinearLayout_size_title"
            android:text="@string/actLinearLogin_title"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_person_black_24dp"
                    />

                <EditText
                    android:id="@+id/actLinearLayout_editUser"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/actLinearLogin_inputUsername_hint"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_vpn_key_black_24dp"
                />

            <EditText
                android:id="@+id/actLinearLayout_editPass"
                android:layout_width="250dp"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:hint="@string/actLinearLogin_inputPassword_hint"/>

        </LinearLayout>


        <Button
            android:id="@+id/actLinearLayout_btnLogin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/actLinearLogin_button_text"
            android:layout_marginTop="32dp"
            android:onClick="doLogin"

            />

    </LinearLayout>





</LinearLayout>